fix contribute and activate buttons
