# tides-server/pkg/restapi/configure_cloud_tides.go
@@ -96,7 +96,7 @@ func configureAPI(api *operations.CloudTidesAPI) http.Handler {
 
 	api.ResourceDeleteVcdResourceHandler = resource.DeleteVcdResourceHandlerFunc(handler.DeleteVcdResourceHandler)
 
-	api.ResourceUpdateResourceHandler = resource.UpdateResourceHandlerFunc(handler.UpdateResourceHandler)
+	api.ResourceAssignPolicyHandler = resource.AssignPolicyHandlerFunc(handler.AssignPolicyHandler)
 
 	api.PolicyGetPolicyHandler = policy.GetPolicyHandlerFunc(handler.GetPolicyHandler)
 
@@ -105,6 +105,8 @@ func configureAPI(api *operations.CloudTidesAPI) http.Handler {
 	api.UsageGetPastUsageHandler = usage.GetPastUsageHandlerFunc(handler.GetPastUsageHandler)
 
 	api.ResourceActivateResourceHandler = resource.ActivateResourceHandlerFunc(handler.ActivateResourceHandler)
+
+	api.ResourceContributeResourceHandler = resource.ContributeResourceHandlerFunc(handler.ContributeResourceHandler)
 
 	api.PreServerShutdown = func() {}
 
