# tides-server/pkg/restapi/operations/resource/assign_policy_responses.go
@@ -1,0 +1,148 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package resource
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// AssignPolicyOKCode is the HTTP code returned for type AssignPolicyOK
+const AssignPolicyOKCode int = 200
+
+/*AssignPolicyOK success
+
+swagger:response assignPolicyOK
+*/
+type AssignPolicyOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *AssignPolicyOKBody `json:"body,omitempty"`
+}
+
+// NewAssignPolicyOK creates AssignPolicyOK with default headers values
+func NewAssignPolicyOK() *AssignPolicyOK {
+
+	return &AssignPolicyOK{}
+}
+
+// WithPayload adds the payload to the assign policy o k response
+func (o *AssignPolicyOK) WithPayload(payload *AssignPolicyOKBody) *AssignPolicyOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the assign policy o k response
+func (o *AssignPolicyOK) SetPayload(payload *AssignPolicyOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AssignPolicyOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// AssignPolicyUnauthorizedCode is the HTTP code returned for type AssignPolicyUnauthorized
+const AssignPolicyUnauthorizedCode int = 401
+
+/*AssignPolicyUnauthorized Unauthorized
+
+swagger:response assignPolicyUnauthorized
+*/
+type AssignPolicyUnauthorized struct {
+}
+
+// NewAssignPolicyUnauthorized creates AssignPolicyUnauthorized with default headers values
+func NewAssignPolicyUnauthorized() *AssignPolicyUnauthorized {
+
+	return &AssignPolicyUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *AssignPolicyUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// AssignPolicyForbiddenCode is the HTTP code returned for type AssignPolicyForbidden
+const AssignPolicyForbiddenCode int = 403
+
+/*AssignPolicyForbidden Forbidden
+
+swagger:response assignPolicyForbidden
+*/
+type AssignPolicyForbidden struct {
+}
+
+// NewAssignPolicyForbidden creates AssignPolicyForbidden with default headers values
+func NewAssignPolicyForbidden() *AssignPolicyForbidden {
+
+	return &AssignPolicyForbidden{}
+}
+
+// WriteResponse to the client
+func (o *AssignPolicyForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(403)
+}
+
+// AssignPolicyNotFoundCode is the HTTP code returned for type AssignPolicyNotFound
+const AssignPolicyNotFoundCode int = 404
+
+/*AssignPolicyNotFound resource not found
+
+swagger:response assignPolicyNotFound
+*/
+type AssignPolicyNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *AssignPolicyNotFoundBody `json:"body,omitempty"`
+}
+
+// NewAssignPolicyNotFound creates AssignPolicyNotFound with default headers values
+func NewAssignPolicyNotFound() *AssignPolicyNotFound {
+
+	return &AssignPolicyNotFound{}
+}
+
+// WithPayload adds the payload to the assign policy not found response
+func (o *AssignPolicyNotFound) WithPayload(payload *AssignPolicyNotFoundBody) *AssignPolicyNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the assign policy not found response
+func (o *AssignPolicyNotFound) SetPayload(payload *AssignPolicyNotFoundBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AssignPolicyNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
